--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "immer": "^10.0.4",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.3",
+    "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^9.8.2",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
